{
    "name": "Mouse",
    "maps": [
        {
            "name": "Mouse",
            "id": "34fd8c7d-e5f3-40b2-96c5-c0e846da5bb4",
            "actions": [
                {
                    "name": "MouseUp",
                    "type": "Button",
                    "id": "58d46066-9871-4e07-be7a-50c3914a54b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDown",
                    "type": "Button",
                    "id": "c56c80f0-c5cc-4c8e-a962-618f1b844538",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f7fd2137-bf0c-4a40-926d-7cbf43280471",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7b65d989-57f9-406a-8878-e36b41cc422d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3c81a1c2-c5e8-4471-9751-e7f83d60c495",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d2898d6-962a-4c84-a52a-74f897482618",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "MouseUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}